<?xml version="1.0"?>
<package format="2">
  <name>actionlib_enhanced</name>
  <version>0.0.4</version>
  <description>The actionlib_enhanced package</description>
  <maintainer email="fabrice.poirier@ensta-bretagne.org">Fabrice Poirier</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
